<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <!--  xmlns:android="http://schemas.android.com/apk/res/android" -->
    <android.support.v4.view.ViewPager 
    android:id="@+id/pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
 
    <!-- This title strip will display the currently visible page title, as well as the page titles for adjacent pages. 
    <android.support.v4.view.PagerTitleStrip
        android:id="@+id/pager_title_strip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top" /> -->
</android.support.v4.view.ViewPager>

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:onClick="stopPressed"
            android:text="@string/stopBtn"
            android:id="@+id/stopBtn" />
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:onClick="settingsPressed"
            android:text="@string/settingsBtn"
            android:id="@+id/settingsBtn" />
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:onClick="startPressed"
            android:text="@string/startBtn"
            android:id="@+id/startBtn" />
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:onClick="aboutPressed"
            android:text="@string/aboutBtn"
            android:id="@+id/aboutBtn" />

</RelativeLayout>
