<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/settings_color_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <SeekBar
        android:id="@+id/greenVal"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/redVal"
        android:layout_alignLeft="@+id/redVal"
        android:layout_marginTop="10dp"
        android:max="@integer/colourMax" />

    <SeekBar
        android:id="@+id/blueVal"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/greenVal"
        android:layout_alignLeft="@+id/redVal"
        android:layout_marginTop="10dp"
        android:max="@integer/colourMax" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/settings_button_label" />

    <ImageView
        android:id="@+id/colourPreview"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/textView1"
        android:layout_centerHorizontal="true"
        />

    <SeekBar
        android:id="@+id/redVal"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/colourPreview"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/red_label"
        android:max="@integer/colourMax" />

    <TextView
        android:id="@+id/red_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/redVal"
        android:layout_below="@+id/textView1"
        android:text="@string/seekbar_red"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/green_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/greenVal"
        android:layout_below="@+id/red_label"
        android:text="@string/seekbar_green"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/blue_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/blueVal"
        android:layout_below="@+id/green_label"
        android:text="@string/seekbar_blue"
        android:textAppearance="?android:attr/textAppearanceSmall" />

   <!--  <Switch
        android:id="@+id/gradient_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/saveBtn"
        android:layout_alignLeft="@+id/blue_label"
        android:text="@string/settings_switch" />
	-->
</RelativeLayout>